# proxy_server

./: .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE  build.rs  const_def.h  docker-compose.yml  nohup.out  test_main.cc
binance_data/: Cargo.toml  binance_grpc_server.rs  binance_server_config.rs  mod.rs  websocket.rs  websocket_manager.rs
binance_data_pipeline/: design.md  pipeline.rs  pipeline_main.rs
binance_data_server/: Cargo.toml
binance_data_server/src/: binance_grpc_server.rs  main.rs  websocket_manager.rs
binance_data_server/src/binance_data_manager/: binance_data_manager.rs  mod.rs
binance_data_server/src/dao/: mod.rs  redis_client.rs
binance_data_server/src/metrics/: metrics.rs
binance_data_server/src/pipelines/: mod.rs  pipelines.rs  redis_client.rs  utils.rs
binance_data_server/src/websocket_manager/: mod.rs  websocket_manager.rs
client/: BUILD  binance_client.rs  client_main.cpp  grpc_client.hpp  session_client.hpp  tonic_client.rs
config/: binance-config.yaml  config.yaml
data_server/: BUILD  main.cpp  market_data_manager.cpp  market_data_manager.h
errors/: BUILD  error.hpp
market_data_manager/: market_data_manager.rs
metrics/: Cargo.toml
metrics/src/: metrics.rs  metrics_server.rs
metrics_server/: Cargo.toml
metrics_server/src/: metrics.rs
pipelines/: Cargo.toml
pipelines/src/: pipeline.rs  pipelines.rs
prometheus/: prometheus.yml
proto/: BUILD  market.proto  route_server.proto  trade.proto
python_lib/: abnormalies  adausdt.txt  binance_connector.py  bnbusdt.txt  btcusdt.txt  comparer.py  diff_adausdt.txt  diff_bnbusdt.txt  diff_btc.txt  diff_btcusdt.txt  diff_dogeusdt.txt  diff_ethusdt.txt  diff_solusdt.txt  dogeusdt.txt  dotusdt.txt  ethusdt.txt  linkusdt.txt  ltcusdt.txt  namelist.input  nohup.out  redis_connector.py  server.py  test.py  test2.py  uniusdt.txt  validator.py  xrpusdt.txt
route_server/: BUILD  data_resolver.cpp  data_resolver.h  grpc_route_server.hpp  route_server_main.cpp  server_main.cpp  session.h  session.hpp
scripts/: bootstrap.sh  init_metrics.sh
trade_client/: Cargo.toml  README.md  build.rs  requirements.txt  test.py
trade_client/generated_code/: trade.rs
trade_client/src/: lib.rs
trade_client/src/readers/: mod.rs  readers.rs
