[package]
authors = ["tiany7 <yt2825@columbia.edu>"]
edition = "2021"
license = "MIT"
name = "proxy_server"
publish = false
version = "0.1.0"
build = "build.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rand = "0.7"
chrono = "0.4"

binance-async = "0.3.0"
anyhow = "1.0"
fehler = { version = "1.0.0-alpha.2" }
env_logger = "0.9"
futures = "0.3"
rust_decimal = "1.10.0"
clap = "3.0"
arrow = "5.0.0"
lz4_flex = "0.11.3"
async-trait = "0.1.52"
tracing = "0.1"
tracing-subscriber = "0.3"


[build-dependencies]
tonic-build = "0.11"





serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[workspace]

members = [
    "binance_data_server", "pipelines"
]


[[bin]]
name = "data_server"
path = "./binance_data_server/src/binance_grpc_server.rs"

[[bin]]
name = "client"
path = "./client/binance_client.rs"

[lib]
name = "pipelines"
path = "./pipelines/src/pipelines.rs"

