[package]
authors = ["tiany7 <yt2825@columbia.edu>"]
edition = "2021"
license = "MIT"
name = "proxy_server"
publish = false
version = "0.1.0"
build = "build.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.21"
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
async-std = "1.9"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
rand = "0.7"
chrono = "0.4"
anyhow = "1.0"
fehler = { version = "1.0.0-alpha.2" }
env_logger = "0.9"
futures = "0.3"
rust_decimal = "1.10.0"
clap = "3.0"
arrow = "5.0.0"
async-trait = "0.1.52"
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13.3"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
hyper = "1.3.1"
actix-web = "4.5.1"
binance-rs-async = "1.3.3"
dashmap = "5.5.3"
async-broadcast = "0.7.0"
crossbeam-channel = "0.5"

[build-dependencies]
tonic-build = "0.11"





serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[workspace]

members = ["binance_data_server", "metrics_server"]


[[bin]]
name = "data_server"
path = "./binance_data_server/src/binance_grpc_server.rs"

[[bin]]
name = "client"
path = "./client/binance_client.rs"




[lib]
name = "metrics_server"
path = "./metrics_server/src/metrics.rs"


[[bin]]
name = "example"
path = "./binance_data_server/src/main.rs"

