[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prometheus = "0.13.3"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
hyper = "1.3.1"
actix-web = "4.5.1"
anyhow = "1.0"





[lib]
name = "metrics"
path = "./src/mod.rs"
