[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "5.0.0"
lz4 = "1.23.1"
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
futures = "0.3"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
rand = "0.7"
chrono = "0.4"
anyhow = "1.0"
async-trait = "0.1.52"

[lib]
name = "pipelines"
path = "./src/pipelines.rs"