[package]
name = "trade_client"
version = "0.1.0"
edition = "2018"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.21"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18.0", features = ["tokio-runtime"] }

[lib]
name = "trade_client"
crate-type = ["cdylib"]

[build-dependencies]
tonic-build = "0.11"

[package.metadata.maturin]
name = "trade_client"